# ros2oak

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/oakrgb/lib/oakrgb/: rgb_publisher
install/oakrgb/share/oakrgb/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/oakrgb/share/oakrgb/launch/: oakrgb.launch.py
log/: latest_build
oakrgb/: package.xml  setup.cfg  setup.py
