<?xml version="1.0"?>
<package format="3">
  <name>oakrgb</name>
  <version>0.1.0</version>
  <description>Publica apenas o tópico /oak/rgb/image_raw/compressed</description>
  <maintainer email="souza.silva@senairs.org.br">fernandasouza</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>depthai</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
